- Fixed a bug allowing to use both the Bag and Misc abilities selected at the same time
- Fixed a bug allowing the player to bypass the internal delay before being able to throw a bomb or mega bomb
- Fixed a bug that could prevent the player to correctly grab the Golden Feather ability when using it
- Fixed a crash when a Drone Missile or Beam got destroyed on top of a Conveyor
- Fixed a crash when releasing the Use Bag ability button at the same frame a bomb or mega bomb hold by the player would explode

Version 1.0.70 :
- Fixed a bug preventing bombs and mega bombs to use their whole explosion hitbox to activate touch switches

Version 1.0.69 :
- Fixed a crash when opening the In-Game map if it tried to display a room that no longer exist

Version 1.0.68 :
- Improved performances of the In-Game map Progress Display
- Improved performances of the In-Game map
- The title screen in The Secret Of Celeste Mountain should no longer be triggered when entering the prologue after a crash, potentially causing a softlock
- Fixed a performance issue occuring after the Theo Cutscene in The Secret Of Celeste Mountain
- Fixed a bug preventing the In-Game map to work properly in campaigns not using a Merge Chapter Controller
- Fixed a bug displaying an unintended line of text when collecting the Varia Jacket ability
- Fixed a bug allowing the player to grab a Bomb or Mega Bomb during its explosion animation
- Fixed a bug preventing the player hairs to be facing the correct direction when sliding on a slope and holding the direction opposite to the slope
- Fixed a bug preventing 3 achievements in The Secret of Celeste Mountain to be awarded correctly

Version 1.0.67 :
- Changed the default display for the In-Game map progress display from 'off' to 'area map'
- Fixed a bug preventing 3 achievements in The Secret of Celeste Mountain to be awarded correctly
- Fixed a crash when starting a map using a StatsFlag Controller

Version 1.0.66 :
- Added a light source to Leafs